--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,17 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+### macOS template
+*.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+# Thumbnails
+._*
+
+# We choose to NOT include vendor dependencies in our repo, trusting they're
+# stable enough and that developers will download and install dep.
+vendor/
