Lots of changes as I learn Go and the Kubernetes API.  Successfully grabs most parameters from the Ingress objects.  Needs lots of error checking and informational messages should go to events as seen on describe Ingress

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ Icon
 # We choose to NOT include vendor dependencies in our repo, trusting they're
 # stable enough and that developers will download and install dep.
 vendor/
+
+main
